--- a/30 - Whack A Mole/style.css
+++ b/30 - Whack A Mole/style.css
@@ -21,6 +21,17 @@ h1 {
   margin-bottom: 0;
 }
 
+
+h4 {
+  font-size: 5rem;
+  padding: 0;
+  margin: 0
+}
+
+.flex-wrapper {
+  display: flex;
+}
+
 .score {
   background: rgba(255,255,255,0.2);
   padding: 0 3rem;
